tests/baselines/reference/interfaceExtendsClassWithPrivate1.errors.txt
==== tests/cases/compiler/interfaceExtendsClassWithPrivate1.ts (3 errors) ====
    class C {
        public foo(x: any) { return x; }
        private x = 1;
    }
    
    interface I extends C {
        other(x: any): any;
    }
    
    class D extends C implements I {
        public foo(x: any) { return x; }
        other(x: any) { return x; }
        bar() { }
    } 
    
    var c: C;
    var i: I;
    var d: D;
    
    c = i;
    i = c; // error
    ~
!!! interfaceExtendsClassWithPrivate1.ts(21,1): error TS2012: Cannot convert 'C' to 'I':
!!! 	Type 'C' is missing property 'other' from type 'I'.
    
    i = d;
    d = i; // error
    ~
!!! interfaceExtendsClassWithPrivate1.ts(24,1): error TS2012: Cannot convert 'I' to 'D':
!!! 	Type 'I' is missing property 'bar' from type 'D'.
    
    c = d;
    d = c; // error
    ~
!!! interfaceExtendsClassWithPrivate1.ts(27,1): error TS2012: Cannot convert 'C' to 'D':
!!! 	Type 'C' is missing property 'other' from type 'D'.